--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,11 @@
   border-radius: 20px;
   margin: 20px;
 }
+
+.person {
+  background-color: darkkhaki;
+  border: 3px solid rebeccapurple;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 20px;
+}
